[package]
name = "eyece"
version = "0.1.0"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"

[dependencies]
eye = { git = "https://github.com/raymanfx/eye-rs", branch = "next" }
ffimage = "^0.6.0"
iced = { git = "https://github.com/hecrj/iced", features = ["image", "tokio"] }
